# libid3tag

./: CHANGES  CMakeLists.txt  README  compat.c  field.c  file.c  frametype.c  id3tag.h  parse.c  render.c  tag.c  ucs4.c  utf16.c
.github/workflows/: build.yml
packaging/: id3tag.pc.in  id3tagConfig.cmake.in
